fix padings on mobile

--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -69,7 +69,7 @@
 }
 
 .hero__button {
-  padding: 0 44px;
+  padding: 5px 117px;
 
   @media (min-width: @tablet-width) {
     align-self: flex-start;
