--- a/source/less/blocks/section.less
+++ b/source/less/blocks/section.less
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   min-height: 302px;
-  padding: 28px 20px;
+  padding: 28px 0;
   padding-bottom: 0;
 
   @media (max-width: 1439px) {
